Next and previous rounds with bounds

--- a/pabutools/visualisation/templates/mes_round_analysis_template.html
+++ b/pabutools/visualisation/templates/mes_round_analysis_template.html
@@ -157,7 +157,7 @@
                       
             <div class="col-12  justify-content-center">
                 <h3>
-                    Round  <span class="round_number"></span>
+                    Round <span class="round_number"></span>
                 </h3>
                 <h4>
                     Winner - <span class="project_name"></span>
@@ -173,8 +173,8 @@
                 
                 <p>
               
-                    <a href="#" class="btn btn-secondary my-2">Previous Round</a>
-                    <a href="#" class="btn btn-primary my-2">Next Round</a>
+                    <a href="#" class="btn btn-secondary my-2" onclick="renderRoundPrev()">Previous Round</a>
+                    <a href="#" class="btn btn-primary my-2" onclick="renderRoundNext()">Next Round</a>
 
                 </p>
             </div>
@@ -469,6 +469,9 @@
     </script>
     <!-- Rounds data -->
     <script>
+        var myJsArray = {{ rounds }};
+        var numProjects = {{ rounds|length }};
+        
         var rounds_data = {
             {% for round in rounds %}
                 "{{ round.id }}": {
@@ -478,6 +481,7 @@
                     "sankey_chart": {"rows": [{% set data_items = round.voter_flow[round.id].items() | sort(attribute='1', reverse=True) %}{% set top_items = data_items[:6] %}{% set other_items = data_items[6:] %}{% set other_total = other_items | map(attribute='1') | sum %}{% for key, value in top_items %}{% if key != round.id %}['{{ projects[round.id]['name'][:15]|replace('\"', '\\\"') }}', '{{ projects[key]['name'][:15]|replace('\"', '\\\"') }}', {{ value }}],{% endif %}{% endfor %}{% if other_items %}['{{ projects[round.id]['name'][:15]|replace('\"', '\\\"') }}', 'Other', {{ other_total }}],{% endif %}]},
                     "chord_chart": {"series": [{% set project_name = projects[round.id]['name'][:15] %}{% set selected_project = round.name %}{% set project_votes = round.voter_flow[selected_project] | dictsort(by='value', reverse=True) %}{% set top_projects = project_votes[:6] | map(attribute=0) | list %}{% if selected_project not in top_projects %}    {% set top_projects = [selected_project] + top_projects %}{% endif %}{% for projFrom in top_projects %}    {        "values":[{% for projTo in top_projects %}{{ round.voter_flow[projFrom].get(projTo, 0) }},{% endfor %}{% if projFrom == selected_project %}{{ round.voter_flow[projFrom].get(projFrom, 0) }},{% endif %}],        "text": "{{ projects[projFrom]['name'][:15]|replace('\"', '\\\"') }}"    },{% endfor %}{% if selected_project not in top_projects %}{"values": [{% for projTo in top_projects %}{{ round.voter_flow[selected_project].get(projTo, 0) }},{% endfor %}{{ round.voter_flow[selected_project].get(selected_project, 0) }},],        "text": '{{ project_name }}'    },{% endif %}]},
                     "intro": {"project_name": "{{ projects[round.id]['name']}}", "round_number": "{{loop.index0 + 1}}", "description": "{{projects[round.id]['description']}}", "project_cost" : "{{projects[round.id]['cost']}}", "budget_remaining" : "{{ round['remaining_budget'] }}", "effective_vote_count" : "{{ round['effective_vote_count'][round.id]}}", "project_votes" : "{{projects[round.id]['votes']}}" },
+                    "roundNum": {{loop.index0}},
                 },
             {% endfor %}}
 
@@ -684,20 +688,35 @@
             element.classList.add('active');
             document.getElementById('projectDropdown').innerText = element.innerText;
             let round_data = rounds_data[roundId];
+            roundNum = round_data.roundNum
             pie_chart_data_for_render = await addPieChartsToCarousel(round_data.pie_chart_triplets);
             updateBarChart(round_data.effective_vote_count_bar_chart.x_labels, round_data.effective_vote_count_bar_chart.values);
             updateStackedBarChart(round_data.effective_vote_count_stacked_bar_chart.x_labels, round_data.effective_vote_count_stacked_bar_chart.initial_values, round_data.effective_vote_count_stacked_bar_chart.reduced_values);
             updateSankeyChart(round_data.sankey_chart.rows);
-            updateIntro(round_data.intro)
+            updateIntro(round_data.intro);
             // renderChordChart(round_data.chord_chart.series);
             pie_chart_data_for_render.forEach(data => {
                 renderPieChart(data[0], data[1], data[2], data[3], data[4], data[5]);
             });
+        }
 
+        async function renderRoundNext() {
+            if (roundNum < numProjects - 1){
+                roundNum = roundNum + 1;
+                renderRound(myJsArray[roundNum].id);
+            }
+        }
+
+        async function renderRoundPrev() {
+            if (roundNum > 0) {
+                roundNum = roundNum - 1;
+                renderRound(myJsArray[roundNum].id);
+            }
         }
     </script>
     <script>
         async function loadRound() {
+            roundNum = 0
             const urlParams = new URLSearchParams(window.location.search);
             projectId = urlParams.get('projectId');
             if (projectId === null) {
