--- a/pabutools/visualisation/templates/greedy_round_analysis_template.html
+++ b/pabutools/visualisation/templates/greedy_round_analysis_template.html
@@ -202,7 +202,7 @@
                             To view the list of the projects selected, click this: <button type="button" id="electionOutcome">View Election Outcome</button>
                             <div style="display: none;" id="outcomeList" class="row">
                                 {% for round in rounds %}
-                                    <p>Project: {{round.selected_project.name}} with cost: {{round.selected_project.cost}} and had {{round.selected_project.votes}} votes.</p>
+                                    <p>Project: "{{ projects[round.selected_project.id]["name"] }}" with cost: {{round.selected_project.cost}} and had {{round.selected_project.votes}} votes.</p>
                                 {% endfor %}
                             </div>
                         </p>
@@ -296,7 +296,7 @@
                                                     <div class="bar red" style="width: {{ (proj.cost / round.max_cost) * 90 }}%; display: inline-flex; align-items: center;">
                                                     </div>
                                                     <div class="rejected-mark">✘</div>
-                                                    <div style="margin-left: 10px; display: inline-flex;"><p style="position:absolute; top: 12px;">{{round.selected_project.name}} - £{{ round.selected_project.cost }}</p></div>
+                                                    <div style="margin-left: 10px; display: inline-flex;"><p style="position:absolute; top: 12px;">{{ round.selected_project.id }}: {{ projects[round.selected_project.id]["name"] }} - £{{ round.selected_project.cost }}</p></div>
 
                                                 </div>
                                             {% endif %}
@@ -307,13 +307,13 @@
                                         <div class="bar-container">
                                             {% if (round.selected_project.cost / round.max_cost) * 90  > 30 %}
                                             <div class="bar green" style="width: {{ (round.selected_project.cost / round.max_cost) * 90 }}%;">
-                                                <div class="bar-inner">&nbsp; {{round.selected_project.name}} - £{{ round.selected_project.cost }}</div>
+                                                <div class="bar-inner"><nobr> {{ round.selected_project.id }}: {{ projects[round.selected_project.id]["name"] }} - £{{ round.selected_project.cost }}</nobr></div>
                                             </div>
                                             {% else %}
                                             <div>
                                                 <div class="bar green" style="width: {{ (round.selected_project.cost / round.max_cost) * 90 }}%; display: inline-flex; align-items: center;">
                                                 </div>
-                                                <div style="margin-left: 10px; display: inline-flex;"><p style="position:absolute; top: 12px;">{{round.selected_project.name}} - £{{ round.selected_project.cost }}</p></div>
+                                                <div style="margin-left: 10px; display: inline-flex;"><p style="position:absolute; top: 12px;">{{ round.selected_project.id }}: {{ projects[round.selected_project.id]["name"] }} - £{{ round.selected_project.cost }}</p></div>
 
                                             </div>
                                             {% endif %}
@@ -323,11 +323,11 @@
                                 <div class="row">
                                     {% if round.rejected_projects %}
                                         <p>
-                                            The chart above shows the current budget of {{round.remaining_budget}}. Projects {% for proj in round.rejected_projects %} {{ proj.name }}, {% endfor %} were rejected in this round, even though they had more votes than the selected project.  
+                                            The chart above shows the current budget of {{round.remaining_budget}}. Projects {% for proj in round.rejected_projects %} {{ projects[proj.id]["name"] }}, {% endfor %} were rejected in this round, even though they had more votes than the selected project.  
                                         </p>
                                     {% else %}
                                         <p>
-                                            The chart above shows the current budget of {{round.remaining_budget}}, and the selected project {{round.selected_project.name}} with cost {{round.selected_project.cost}}. The selected project was chosen because it had the most votes and was within budget.
+                                            The chart above shows the current budget of {{round.remaining_budget}}, and the selected project "{{ projects[round.selected_project.id]["name"] }}" with cost {{round.selected_project.cost}}. The selected project was chosen because it had the most votes and was within budget.
                                         </p>
                                     {% endif %}
                                 </div>
@@ -465,40 +465,43 @@
                         "backgroundColor": '#2596be',
                         },
                     },
-          "scale-x": {
-            
-             "labels": {{ project_votes.keys() | list }}, // Label that identifies each project in the round
-             "title": {
-                "text": "Project"
-             },
-             "item": { // Explicitly control the appearance of the scale labels
-                "font-size": 14, // Adjust font size as needed
-                "offset-x": 0, // Adjust to move the label left or right if needed
-                "offset-y": 0 // Adjust to move the label up or down if needed
-             },"zooming": true,
-                    "zoomTo": [0, 15]
-          },
-          "scale-y": {
-             "title": {
-                "text": "Number of Votes"
-             }
-          },
-          "series": [{
-             "values": {{ project_votes.values() | list }}, // Current votes values
-             'hover-state': { /* Hover object */
-                'background-color': "orange",
-            }
-          }, ],
-          "plot": {
-            "tooltip": {
-                "text": "Project %scale-key-label has %v votes"
+        "plotarea": {
+            "margin-left":"130px",
+            "margin-right":"130px"
+        },
+        "scale-x": {
+            "labels": [{% for project_id in project_votes.keys()%}"{{ projects[project_id]['name'][:15]|replace('\"', '\\\"') }}",{% endfor %}], // Label that identifies each project in the round
+            "title": {
+            "text": "Project"
             },
-             "animation": {
-                "effect": "ANIMATION_SLIDE_BOTTOM",
-                "sequence": "ANIMATION_BY_PLOT_AND_NODE",
-                "speed": 0
-             }
-          }
+            "item": { // Explicitly control the appearance of the scale labels
+            "font-size": 14, // Adjust font size as needed
+            "offset-x": 0, // Adjust to move the label left or right if needed
+            "offset-y": 0 // Adjust to move the label up or down if needed
+            },"zooming": true,
+                "zoomTo": [0, 15]
+        },
+        "scale-y": {
+            "title": {
+            "text": "Number of Votes"
+            }
+        },
+        "series": [{
+            "values": {{ project_votes.values() | list }}, // Current votes values
+            'hover-state': { /* Hover object */
+            'background-color': "orange",
+        }
+        }, ],
+        "plot": {
+        "tooltip": {
+            "text": "Project %scale-key-label has %v votes"
+        },
+            "animation": {
+            "effect": "ANIMATION_SLIDE_BOTTOM",
+            "sequence": "ANIMATION_BY_PLOT_AND_NODE",
+            "speed": 0
+            }
+        }
     },
           height: '100%',
           width: '100%'
@@ -511,15 +514,18 @@
     var projectValues = {{ project_votes.values() | list }};
     var seriesData = [];
     var pNames = projectNames;
+    colorsList = [] // List to store the colour of bars depending on if it was selected or rejected
 
     for (var i = 0; i < projectNames.length; i++) {
         var projectName = projectNames[i];
         var projectValue = projectValues[i];
         var selectedOrRejected = projects_selected_or_rejected[projectName];
         
-        // Assign color based on the project's selection status
+        // Assign color based on the project's selection status and append to list
         var color = selectedOrRejected ? 'green' : 'red';
-        
+        colorsList.push(color);
+
+        /*
         seriesData.push({
             "values": [projectValue],
             "background-color": color,
@@ -528,10 +534,11 @@
             },
             "text": projectName
         });
+        */
     }
 
     // Sort seriesData by the number of votes in descending order
-    seriesData.sort((a, b) => b.values[0] - a.values[0]);
+    //seriesData.sort((a, b) => b.values[0] - a.values[0]);
 
     var config = {
         "type": "hbar",
@@ -570,8 +577,12 @@
                 "backgroundColor": '#2596be',
             },
         },
+        "plotarea": {
+            "margin-left":"130px",
+            "margin-right":"130px"
+        },
         "scale-x": {
-            "labels": {{ project_votes.keys() | list }},
+            "labels": [{% for project_id in project_votes.keys() %}"{{ projects[project_id]['name'][:15]|replace('\"', '\\\"') }}",{% endfor %}],
             "title": {
                 "text": "Project"
             },
@@ -588,8 +599,15 @@
                 "text": "Number of Votes"
             }
         },
-        "series": seriesData,
+        //"series": seriesData,
+        "series": [{
+            "values": {{ project_votes.values() | list }}, // Current votes values
+            'hover-state': { /* Hover object */
+                'background-color': "orange",
+            }
+        }, ],
         "plot": {
+            "styles": colorsList,
             "tooltip": {
                 "text": "Project %scale-key-label has %v votes"
             },
